Fix: hidden overflow in top-section instead body

--- a/src/sass/index.sass
+++ b/src/sass/index.sass
@@ -18,7 +18,8 @@
     @include flex-center
     flex: 1
     padding:20px
-    
+    overflow: hidden
+
     p
         font-size: 1.5rem
         color: #666464
